Fix some styles on homepage and details page so it displays better on small screens, add footer

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -38,11 +38,3 @@ body {
   width: 100%;
   height: 500px;
 }
-
-.star-container {
-  position: relative;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-}
